--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <h2>Take A Look At Some Past Courses</h2>
             <div>
-                <h3>1. Graphycal Programming with Scratch</h3>
+                <h3>1. Graphical Programming with Scratch</h3>
                 <p class="about">This course thought the foundamental of programming using 
                     a Graphycal Programming Language called Scratch</p>
                 <img src="https://tinyurl.com/odcscratch" alt="" width="50%" height="50%">
