--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             body{
                 background-color:antiquewhite;
                 color: black;
-                font-family: 'Courier New', Courier, monospace;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
             }
 
             a{
