--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <h2>Take A Look At Some Past Courses</h2>
             <div>
                 <h3>1. Graphical Programming with Scratch</h3>
-                <p class="about">This course thought the foundamental of programming using 
-                    a Graphycal Programming Language called Scratch</p>
+                <p class="about">This course taught the fundamental of programming using 
+                    a Graphical Programming Language called Scratch</p>
                 <img src="https://tinyurl.com/odcscratch" alt="" width="50%" height="50%">
                 <h3>2. Graphic Design with Canva</h3>
-                <p class="about">This was a 4-week course that thought the Basics of graphic 
+                <p class="about">This was a 4-week course that taught the basics of graphic 
                     design using Canva
                     where SuperCoders created stunning designs for posters, cards, presentations, 
                     and more, adding 
@@ -67,7 +67,7 @@
                <p class="about">To apply for the next course, keep following the 
                 <a href="https://www.facebook.com/OrangeDigitalCenterLB">
                     Orange Digital Center Facebook page</a>.   
-                The post for the next training will be posted on the ODC facebook 
+                The post for the next training will be posted on the ODC Facebook 
                 page along with the link to apply. When the post comes up, click on the application link to 
                 apply for your child or children</p> 
             </div>
