--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                 <p>
                     SuperCoders is a training program at the Orange Digital 
                     Center that offers 
-                    computer based courses for kids and teenagers.
+                    computer-based courses for kids and teenagers.
                 </p>
                 <p>
-                    This program empowers learners with foundamental knowledge 
+                    This program empowers learners with fundamental knowledge 
                     and skills in many 
                     areas including, 
-                    but not limitted to: Graphic Design,  
+                    but not limited to: Graphic Design,  
                     Computer Programming and Web Development.
                 </p>
             </div>
             <h2>Take A Look At Some Past Courses</h2>
             <div>
                 <h3>1. Graphical Programming with Scratch</h3>
-                <p class="about">This course taught the fundamental of programming using 
+                <p class="about">This course taught the fundamentals of programming using 
                     a Graphical Programming Language called Scratch</p>
                 <img src="https://tinyurl.com/odcscratch" alt="" width="50%" height="50%">
                 <h3>2. Graphic Design with Canva</h3>
